Add ability to set default tool action via config.
Documentation included in the sample file. It can be set by:
    default_tool_action = module.submodule.submodule:ClassName
where ClassName refers to a class with an execute method conforming
to the galaxy.tools.actions.ToolAction.execute method.
Tool-specific execute methods can be specified by <action> elements
in the tool conf file, with module and class attributes.
TODO: Consider moving default_tool_action setting from instance-level
to class level.

--- a/config/galaxy.ini.sample
+++ b/config/galaxy.ini.sample
@@ -988,6 +988,15 @@ use_interactive = True
 # if running many handlers.
 #cache_user_job_count = False
 
+
+# Default Tool Action configuration
+# Set the default tool action for 'default' type tools. This allows custom
+# logic to be used during the execute/job instantiation process.
+# Defaults to "galaxy.tools.actions:DefaultToolAction", and can be set
+# individually by an <action> element in the tool configuration file, with
+# module and class attributes.
+#default_tool_action = galaxy.tools.actions:DefaultToolAction
+
 # ToolBox filtering
 
 # Modules from lib/galaxy/tools/toolbox/filters/ can be specified in
